discussion/kv_engine/179286/179286_rev16_discussion.txt
======================================================================================================================
DESCRIPTION:

Move the server interface class includes into a new directory

Change-Id: Id839ab6df2c61328a3a9d6915806f80f83695491

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-09-21 10:58:45.000000000
Message: 
Patch Set 16: Patch Set 15 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-21 11:20:58.000000000
Message: 
Patch Set 16: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20521/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_iface/core.h:14:10: error: "memcached/types.h" file not found [clang-diagnostic-error]
#include "memcached/types.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20521/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_iface/core.h:14:10:
error: "memcached/types.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20521/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19744/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49532/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41632/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10230/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10329/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22498/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21885/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23661/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22869/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30898/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-09-21 12:35:53.000000000
Message: 
Abandoned

clang tidy is a pain in the ass and I can't be bothered with it...
----------------------------------------------------------------------------------------------------------------------
